appId: com.shortener
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Shortener"
    timeout: 5000
- tapOn: "https://example.com"
- inputText: "example.com"
- tapOn: "Encurtar"
- extendedWaitUntil:
    visible: "Alias gerado"
    timeout: 45000
- assertVisible: "Url encurtada"
- assertVisible: "URL original"
- assertVisible: "https://example.com"
- assertVisible: "Compartilhar"
- assertVisible: "Abrir URL"
