appId: com.shortener
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Shortener"
    timeout: 5000
- tapOn: "Encurtar"
- assertVisible: "Digite uma URL para encurtar."
